# Simpatibot

./: .env.example  README.md  pagina.html  pyproject.toml  script.py  teste.py
.github/: PULL_REQUEST_TEMPLATE
Functions/: auth.py  aux_functions.py
environment/: pyvenv.cfg
